Refiner/rcapRefiner.h

   typedef signed __int8 int8_t;
   typedef signed __int32 int32_t;
   typedef signed char int8_t;
   typedef long int32_t;
typedef float float32_t;  /* REAL*4 */
typedef double float64_t; /* REAL*8 */
/**
 * @brief Version 文字列を標準出力に出力する。
 */
void rcapGetVersion( void );
/**
 * @brief Refiner を初期化し、節点番号と要素番号のオフセット値を与える。
 * @param[in] nodeOffset 呼び出し側の節点番号の初期値（C言語なら0、Fortran言語なら1など）
 * @param[in] elementOffset 呼び出し側の節点番号の初期値（C言語なら0、Fortran言語なら1など）
 * @note これらのオフセット値よりも小さい値を節点番号や要素番号で与えた場合は無効となる。
 */
void rcapInitRefiner( const int32_t* nodeOffset, const int32_t* elementOffset );
/**
 * @brief Refiner が内部で保持している中間節点データのキャッシュをクリアする。
 * @note 細分を複数回行う場合に、一旦内部で保持しているデータをクリアするために使う。
 * 例えば第１段階の細分が終わって、第２段階の細分を始める前に呼ぶ。
 * ここでクリアされるデータは中間節点のデータのみであり、節点の座標値、
 * 細分時に更新する節点グループの情報等はクリアされないので注意する。
 */
void rcapClearRefiner( void );
/**
 * @brief Refiner の終了処理を行う。これを呼び出した後はすべての処理が無効になる。
 * @note Refiner に登録した節点、要素、境界条件などのメモリを解放する前に
 * Refiner の終了処理を行ってください。Refiner の終了処理を行う前に
 * メモリを解放すると、不正なアドレスにアクセスする可能性があります。
 */
void rcapTermRefiner( void );
/**
 * @brief 形状補正に用いる CAD ファイルを指定する。\n
 * 細分前のメッシュはこの CAD ファイルから生成されているものとする。
 * この関数を呼んで CAD ファイルを指定しなかった場合は、形状補正は行わない。
 * メッシュ生成時の節点の globalID と CAD の形状データの対応が与えられているとする。
 * 領域分割後のメッシュに対して細分を行う場合は、setPartitionFilename などで
 * globalID と localID の対応付けを与える必要がある。
 *
 * @remark この関数で与える CAD ファイルには、形状データだけではなく、
 * 初期メッシュの節点と CAD の面の間の対応関係も記述されているため、
 * 初期メッシュが異なる場合には、CAD ファイルも置き換えなければならない。
 * CAD ファイルの節点番号は 0 始まりの番号を用いている。
 * rcapSetNode32 rcapSetNode64 または rcapSetPartitionFilename で与える場合には
 * rcapInitRefiner で与える nodeOffset だけずれるので注意する。
 *
 * @remark 細分前の事前補正を行う場合は rcapSetNode32/64 で節点座標を与える前に
 * この関数を呼ぶ必要があります。
 * この関数を先に呼んだ場合も細分時の形状適合は行いますが、細分前の事前補正をしません。
 *
 * @param[in] filename ファイル名
 */
void rcapSetCADFilename( const char* filename );
/**
 * @brief 中間節点の生成に2次要素の形状関数を使うかどうかを設定する。
 * @param[in] flag 非零の時に有効にし、零の時に無効にします
 *
 */
void rcapSetSecondFitting( const int32_t* flag );
/**
 * @brief 中間節点を Laplacian Smoothing するかどうかを設定する。
 * @param[in] flag 非零の時に有効にし、零の時に無効にします
 *
 */
void rcapSetSmoothing( const int32_t* flag );
/**
 * @brief 節点の globalID と localID の対応関係を記述したファイルを指定する。\n
 * 指定しない場合は、globalID と localID は区別しない。
 * ファイルではなく、節点座標を登録するときに globalID と localID の関係を与えることもできる。
 * @param[in] filename ファイル名
 * @note ファイルフォーマットは革新プロジェクトでソルバとカプラの間で用いたものに準ずる。
 */
void rcapSetPartitionFilename( const char* filename );
/**
 * @brief 節点座標を Refiner に与える
 * @param[in] num 与える節点の個数
 * @param[in] coords 節点の座標、double 型の配列で (x,y,z) の順番に 3*num 個並べたもの
 * @param[in] localIds 領域分割した領域内の局所節点ID の配列
 * @param[in] globalIds 大域節点ID の配列
 *
 * @note 初期値から順に num 個並んでいる場合は localIds = NULL でよい。
 * Global ID をファイルから与える場合は globalIds = NULL にする。
 * setPartitionFilename で領域分割の大域節点と局所節点の対応が与えられている時には、
 * globalIds を与えなくてもよい。この関数で与えた場合には、setPartitionFilename で与えた対応を上書きする。
 * setPartitionFilename で与えない場合に、この関数でも globalIds を与えない場合は、localId をそのまま使う。
 *
 * @li setNode64( num, coords, NULL, NULL ) => global と local は同じで nodeOffset から順に num 個
 * @li setNode64( num, coords, globalIds, NULL ) => local は nodeOffset から順に num 個、global は引数で与える
 * @li setNode64( num, coords, NULL, localIds ) => global と local は同じで local は与える
 * @li setNode64( num, coords, globalIds, localIds ) => global と local をそれぞれ与える
 *
 * @note CADファイルを与えずに形状補正をしない場合は、局所節点番号と大域節点番号の対応は必要ない。
 * @note Fortran から呼ぶ場合には NULL アドレスの代わりに最初の値が nodeOffset よりも小さい配列を与える。
 */
void rcapSetNode64( const int32_t* num, float64_t* coords, int32_t* globalIds, int32_t* localIds );
/**
 * @brief 節点座標を Refiner に与える
 * @param[in] num 与える節点の個数
 * @param[in] coords 節点の座標、float 型の配列で (x,y,z) の順番に 3*num 個並べたもの
 * @param[in] localIds 領域分割した領域内の局所節点ID の配列
 * @param[in] globalIds 大域節点ID の配列
 *
 * @note 詳細は rcapSetNode64 に準ずる
 */
void rcapSetNode32( const int32_t* num, float32_t* coords, int32_t* globalIds, int32_t* localIds );
/**
 * @brief 現在 Refiner が保持している節点の個数を返す。細分したら増える。
 * @return 節点の個数
 */
int32_t rcapGetNodeCount( void );
/**
 * @brief 細分した要素の個数を計算する（実際には細分はしない）
 * @param[in] num 要素の個数
 * @param[in] etype 入力要素の型
 * @return 細分した結果の要素の個数
 */
int32_t rcapGetRefineElementCount( const int32_t* num, const int8_t* etype );
/**
 * @brief
 * rcapRefineElement により細分されたデータ（節点グループ、要素グループ、面グループ）をコミットする。
 * すなわち、以下の rcapGet[Node|Element|Face]Group[Count] メソッドの対象を細分前のデータから
 * 細分後のデータに変える。細分前のデータは削除される。
 * この関数を実行後に rcapRefineElement を再度実行した場合、更新されるデータは
 * 細分後のデータになる。
 * また、rcapRefineElement で細分後の要素に付与される要素番号も elementOffset 値にリセットされる。
 * @remark
 * rcapRefineElement を複数回呼ぶ場合は、複数回呼んだ後に一度だけ rcapCommit を実行する。
 * ２段階の細分を行う場合は、１段階目の細分 rcapRefineElement を呼んだ後、
 * ２段階目の rcapRefineElement を呼ぶ前に実行する。
 * @remark
 * rcapAppendBoundaryNodeGroup、rcapAppendBoundaryNodeVariableXXX で追加された境界条件については
 * この関数が呼ばれた時点で登録されている要素の境界面を抽出して、その面で境界条件を更新する。
 * 大規模複雑モデルのこれらの条件を更新する場合は、境界面の抽出に時間とメモリを要する場合がある。
 */
void rcapCommit(void);
/**
 * @brief 細分と同時に更新する節点グループを登録
 * @param[in] dataname 節点グループの識別子
 * @param[in] num 節点グループの節点数
 * @param[in] nodeArray 節点グループの節点
 * @note refineElement を呼び出す前にこの関数で節点グループを登録しておくと、refineElement を呼び出した時に、
 * 細分する要素の辺の両端が節点グループに含まれるならば、細分によって生成された辺の中点の節点を
 * 節点グループに追加する。
 * 識別子は文字列です。Fortran から呼び出す場合は、文字列の最後にヌル文字を追加してください。
 * @code
 * int32_t cl[2] = {1,2};
 * appendNodeGroup("CL",2,cl);
 * refineElement( num, etype, nodeArray, resultNodeArray );
 * rcapCommit();
 * size_t s = getNodeGroupCount("CL");
 * int32_t* resultcl = new int_32[s];
 * getNodeGroup("CL",s,resultcl);
 * @endcode
 */
void rcapAppendNodeGroup( const char dataname[80], const int32_t* num, const int32_t* nodeArray );
/**
 * @brief Refiner に登録されている節点グループの節点の個数を返す
 * @param[in] dataname 節点グループの識別子
 * @return 節点グループの節点の個数
 * @note refineElement を呼ぶ前は、appendNodeGroup で登録した個数そのものを返す。
 */
int32_t rcapGetNodeGroupCount( const char dataname[80] );
/**
 * @brief NodeVariable を登録したときに、中間節点に与える値の決め方を選択します。
 * 現在は "MIN" "MAX" "MIDDLE" の3種類に対応しています。
 * MIN は中間節点を生成するのに用いた節点上の値の最小値を与えます。
 * MAX は中間節点を生成するのに用いた節点上の値の最大値を与えます。
 * MIDDLE は中間節点を生成するのに用いた節点上の値の平均値を与えます。
 */
void rcapSetInterpolateMode( const char mode[32] );
/**
 * @brief NodeVariable を登録したときに、中間節点に与える値の決め方を返します。
 * 戻り値は "MIN" "MAX" "MIDDLE" という文字列のいずれかです。
 */
void rcapGetInterpolateMode( char mode[32] );